[iOS] JavaScriptCore fails to build with newer versions of clang https://bugs.webkit.org/show_bug.cgi?id=122162

Reviewed by Darin Adler.

* runtime/GCActivityCallback.cpp: Add !PLATFORM(IOS)-guard around constant pagingTimeOut
as we don't compile the code that uses it on iOS.

Canonical link: https://commits.webkit.org/140210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156714 268f45cc-cd09-0410-ab3c-d52691b4dbfc